[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
description = "A tool like grep written in Rust. From the rust book"
repository = "https://github.com/ferretcode/minigrep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
